--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- <span> PC:</span> <span id="pc">0000</span> <span> Cont:</span>  -->
 
 <body>
- <h2>Herc ver 1.01 (separate files)</h2>
+ <h2>Js-370 ver 1.01 )</h2>
  <span id="runstate" class="red txtRed">Stopped</span><span>          St2: </span>
  <span id="state2">XXX</span>
 
