--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <!-- <span> PC:</span> <span id="pc">0000</span> <span> Cont:</span>  -->
 
 <body>
- <a href="/js370.html">Js-370 ver 1.01 </a>
+	<h1> Mstram.github.io </h1>
+	<a href="/js370.html">Js-370 ver 1.01 </a>
 
 
 
