--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 <body>
 	<h1> Mstram.github.io </h1>
 	<br>
-	<a href="/js370.html">Js-370 ver 1.01 </a>
-
-	<a href="/reactjs-twitter.html">ReactJS Essentials Twitter snapterest V 1.00</a>
+	
+	<h2><a href="/js370.html">Js-370 ver 1.01 </a></h2>
+       <br>
+	
+	<h2> <a href="/reactjs-twitter.html">ReactJS Essentials Twitter snapterest V 1.00</a></h2>
 	
 	
 
